artdir = $(kde_datadir)/xpertmud/artwork
dist_art_DATA = \
	heavy_wood_variant1.png light_wood_variant1.png \
	building_variant1.png battlemech_variant1.png \
	heli.png tanks-body.png tanks-hoover.png \
	tanks-tracks.png tanks-turrent.png \
	tanks-wheelz.png fire.png rubble.png \
	installation_variant1.png

artwalldir = $(kde_datadir)/xpertmud/artwork/walls
dist_artwall_DATA = $(wildcard $(srcdir)/walls/*.png)

artroaddir = $(kde_datadir)/xpertmud/artwork/roads
dist_artroad_DATA = $(wildcard $(srcdir)/roads/*.png)

artbuildingdir = $(kde_datadir)/xpertmud/artwork/buildings
dist_artbuilding_DATA = $(wildcard $(srcdir)/buildings/*.png)

artbridgesdir = $(kde_datadir)/xpertmud/artwork/bridges
dist_artbridges_DATA = $(wildcard $(srcdir)/bridges/*.png)

artstatusdir = $(kde_datadir)/xpertmud/status
dist_artstatus_DATA = $(wildcard $(srcdir)/status/*.png) $(srcdir)/status/status.def
